examples/test/testpolicy14168.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14168
  namespace: namespace104
spec:
  podSelector:
    matchLabels:
      key0: value32
      key33: value11
      key34: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value30
          key26: value35
          key18: value2
